Adjusting hero featured for responsive, adding search-overlay (currently hidden awaiting javascript control), repaired main menu alignment issues that randomly appeared, added href details for mobile-menu and search-overlay.

--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -9,18 +9,17 @@
     height: 92px;
     position: fixed;
     lost-utility: clearfix;
-    //lost-column: 1/1;
-  //  background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, .6), rgba(255, 255, 255, 0));
+    //  background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, .6), rgba(255, 255, 255, 0));
     z-index: 5;
     //backdrop-filter: blur(4px);
+    margin-top: 0;
   }
-
 }
 
 .logo {
   background-image: url("../elements/v100it2.png");
   background-repeat: no-repeat;
-  height: 50px;
+  height: 11vh;
   width: 100%;
   background-size: contain;
   background-position: center;
@@ -37,9 +36,6 @@
 
 .mobile-menu {
   display: block;
-  @media (min-width: $screen-md-min) {
-    display: none;
-  }
   width: 100%;
   a:first-child {
     position: absolute;
@@ -55,27 +51,30 @@
     padding: 0 4% 0 4%;
     padding-right-max: 20px;
   }
+  @media (min-width: $screen-md-min) {
+    display: none;
+  }
 }
 
 .main-menu {
   display: none;
   @media (min-width: $screen-md-min) {
     display: block;
-  }
-  lost-column:13/16;
-  lost-move: -3/16;
-  height: 92px;
-  ul {
-    list-style-type: none;
-    margin-left: 5px;
-    padding: 0;
-    lost-utility: clearfix;
+    lost-column:13/16;
+    lost-move: -3/16;
+    height: 92px;
+    ul {
+      list-style-type: none;
+      margin-left: 20px;
+    //  padding: 0;
+      lost-utility: clearfix;
+    }
   }
 }
 
 .main-menu-item {
   float: left;
-  lost-column: 2/13 0 15px;
+  lost-column: 2/13 0 5px;
   //text-align: center;
 }
 
@@ -86,33 +85,9 @@
 
 .search-box {
   display: inline-block;
-  //border: 1px solid black;
   lost-column: 1/13 0 5px;
   text-align: center;
   position: relative;
   top: 5px;
   overflow: hidden;
-}
-
-.search-field {
-  lost-utility: clearfix;
-  height: 50px;
-  width: 300px;
-  background-color: white;
-  position: relative;
-  text-align: left;
-}
-
-.search-field input#search {
-  width: 300px;
-  height: 50px;
-  background: #2b303b;
-  border: none;
-  font-size: 10pt;
-  float: left;
-  color: #63717f;
-  padding-left: 45px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
 }
